--- a/public/css/main.css
+++ b/public/css/main.css
@@ -102,6 +102,8 @@ header h1 {
 #chat .rightbox {
     width: 85vw;
     height: 100vh;
+    display: flex;
+    flex-direction: column-reverse;
 }
 
 #chat .leftbox {
@@ -140,3 +142,14 @@ header h1 {
     font-weight: bold;
 }
 
+#chat .loginas {
+    position: absolute;
+    top: 0;
+    right: 0;
+    margin-top: 60px;
+    margin-right: 130px;
+    color: white;
+    font-size: 30px;
+    font-weight: bold;
+    font-family: sans-serif;
+}
