--- a/views/chat.slim
+++ b/views/chat.slim
@@ -6,10 +6,15 @@
 div id="chat"
     div class="rightbox"
         -if id != nil
-            p asdf
+            form action="/write/#{user_id}/#{id}" method="POST"
+                input type="text" name="content" placeholder="Write a message"
+                input type="submit" value="send"
+            -(0...(names.length)).each do |i| 
+                h3 #{message[i][2]}
+                p #{names[i]}
     div class="leftbox"
         div class="search"
-            form action="./search" method="POST"
+            form action="/search" method="POST"
                 input value="#{value}" name="search" class="searchinput" type="text" placeholder="Search for other users"
                 input type="image" alt="submit" src="/img/search.png"
         div class="friendlist"
